welcome.lessons.welcome.summative.Moria.scala.code
retourne()
while(!estFAceMur()){
  if (estSurBiscuit()){
    prendBiscuit()
    retourne()
    while(!estSurBiscuit()){
      avance()
    }
    recule()
    poseBiscuit()
  } else{
    retourne()
    avance()
  }
  
}